Refactor HTML files to update stylesheet links and preload scripts; remove disabled media attributes for improved responsiveness and performance.

--- a/.vercel/output/static/foundation-phase.html
+++ b/.vercel/output/static/foundation-phase.html
@@ -6,31 +6,27 @@
 		<link rel="icon" href="./pcsLogoNew.webp" />
 		<meta name="viewport" content="width=device-width" />
 		
-	<style>.circle-1.svelte-li6gfl{animation:svelte-li6gfl-fade .5s ease-in-out;animation-fill-mode:forwards}.circle-2.svelte-li6gfl{animation:svelte-li6gfl-fade .5s ease-in-out .1s;animation-fill-mode:forwards}.circle-3.svelte-li6gfl{animation:svelte-li6gfl-fade .5s ease-in-out .2s;animation-fill-mode:forwards}@keyframes svelte-li6gfl-fade{0%{opacity:0}to{opacity:1}}.nav-links.svelte-d8j1hi li[aria-current=page]:where(.svelte-d8j1hi):before{--size: 5px;content:"";width:0;height:0;position:absolute;top:0;left:calc(50% - var(--size));border:var(--size) solid transparent;border-top:var(--size) solid var(--color-accent)}.float-shadow{animation:float 3s ease-in-out infinite}@keyframes float{0%{filter:drop-shadow(0 20px 10px rgba(0,0,0,.6));transform:translatey(0)}50%{filter:drop-shadow(0 40px 10px rgba(0,0,0,.3));transform:translatey(-20px)}to{filter:drop-shadow(0 20px 10px rgba(0,0,0,.6));transform:translatey(0)}}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(1){transform:translate(150%,-160%) rotate(-15deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(2){transform:translate(200%,75%) rotate(15deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(3){transform:translate(-250%,-160%) rotate(15deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(4){transform:translate(-275%,75%) rotate(-15deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(5){transform:translate(-50%,15%) rotate(-20deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(6){transform:translate(-25%,5%) rotate(-10deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(7){transform:translate(25%,5%) rotate(10deg)}.card-group.svelte-znm0wj:hover>:where(.svelte-znm0wj):nth-child(8){transform:translate(50%,15%) rotate(20deg)}.gradient.svelte-znm0wj{background:linear-gradient(#0000,#000c 25%,#000)}
-
-.title__extra.svelte-1w99hdf{-webkit-text-stroke:2px hsla(var(--textLight));-webkit-text-fill-color:transparent;paint-order:stroke fill;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);opacity:20%;z-index:-1;font-weight:100;letter-spacing:var(--tracking-wider);line-height:70%}.title__content.svelte-1w99hdf{z-index:3;display:flex;flex-direction:row;justify-content:center;align-items:center;gap:var(--spaceM)}.title.svelte-1w99hdf{position:relative;display:flex;justify-content:center;align-items:center;flex-direction:column;gap:var(--spaceS);padding-top:var(--spaceM);padding-bottom:var(--spaceM);overflow:hidden;height:30svh;-webkit-user-select:none;user-select:none}.title.svelte-1w99hdf:after{pointer-events:none;content:"";position:absolute;inset:0;z-index:-8;background:var(--smooth-border)}.title__bg.svelte-1w99hdf{content:"";position:absolute;inset:0;z-index:-10;width:100%;height:100%;object-fit:cover;animation:svelte-1w99hdf-pageTitleAni 60s infinite ease-in-out;filter:brightness(.5) blur(2px)!important;object-position:top}@keyframes svelte-1w99hdf-pageTitleAni{0%{object-position:top}50%{object-position:bottom}to{object-position:top}}.title__text.svelte-1w99hdf{font-weight:500;color:hsla(var(--textLight));position:relative;filter:drop-shadow(0px 0px 2px currentcolor);letter-spacing:var(--tracking-wide);transform:translateY(10%);line-height:90%}@keyframes svelte-1w99hdf-tracking-in-expand{0%{letter-spacing:-.5em;opacity:0}40%{opacity:.6}to{opacity:1}}.titleText.svelte-1w99hdf{font-family:Figtree}
-</style>
-		<link href="./_app/immutable/assets/Transition.B6v7mLQw.css" rel="stylesheet" disabled media="(max-width: 0)">
+		<link href="./_app/immutable/assets/Transition.B6v7mLQw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/0.DRttO61F.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/PageTitle.poStraSA.css" rel="stylesheet" disabled media="(max-width: 0)">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BoZG9h7h.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cn9XgMLg.js">
+		<link href="./_app/immutable/assets/PageTitle.poStraSA.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CfQx6me5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DjB7elDM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CkSH_zLV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CPQTs06T.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DSXA_4ii.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUApaBEI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CNgDJOdN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1YBdJSa0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.qFZ9S6Xx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CnSl-9d4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/nLAX7IoQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BGNuTCDA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BCxvF17E.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.pHkHMfcb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DbYvv3ZG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DoeVr0jo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BoLAIsPZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/KUCcIKCJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C2CsPXca.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/COi9x0Hd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B5snJuzz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C1OS7tWq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DZ43q3P9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmC2pdGl.js">
@@ -40,8 +36,8 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/C17djygo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DLaVfjaY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CarmsFJa.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.DnjWF2C2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/KRAQRr5a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.9kLSJ3p1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_3cXWEZV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BCFfJPm3.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/17.BqL4nZ_t.js"><!--12qhfyh--><meta name="description" content="Harding Christian Academy offers Christ-centered education with academic excellence and character formation."/> <link rel="canonical" href="https://www.hardingchristianacademy.co.za/foundation-phase"/> <meta name="robots" content="index, follow"/> <meta property="og:title" content="Harding Christian Academy"/> <meta property="og:description" content="Harding Christian Academy offers Christ-centered education with academic excellence and character formation."/> <meta property="og:type" content="website"/> <meta property="og:url" content="https://www.hardingchristianacademy.co.za/foundation-phase"/> <meta property="og:site_name" content="Harding Christian Academy"/> <meta property="og:image" content="https://www.hardingchristianacademy.co.za/pcsLogoNewOutlineWhite.png"/> <meta property="og:image:alt" content="Harding Christian Academy logo"/> <meta property="og:locale" content="en_ZA"/> <meta name="twitter:card" content="summary_large_image"/> <meta name="twitter:title" content="Harding Christian Academy"/> <meta name="twitter:description" content="Harding Christian Academy offers Christ-centered education with academic excellence and character formation."/> <meta name="twitter:image" content="https://www.hardingchristianacademy.co.za/pcsLogoNewOutlineWhite.png"/> <meta name="view-transition" content="same-origin"/><!----><title>Harding Christian Academy</title>
 
@@ -68,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_1dhvhuk = {
+					__sveltekit_qz6agg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BoZG9h7h.js"),
-						import("./_app/immutable/entry/app.1YBdJSa0.js")
+						import("./_app/immutable/entry/start.CfQx6me5.js"),
+						import("./_app/immutable/entry/app.qFZ9S6Xx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3, 17],
