--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/pcsLogoNew.webp" />
+		<link rel="icon" href="%sveltekit.assets%/pcsLogoNewOutlineWhiteLoader.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 
